Cycles failed to compiling kernal for baking with AMD GPU #70602

Closed
opened 2019-10-07 09:46:46 +02:00 by Le Giang · 4 comments

System Information
Operating system: Windows 7
Graphics card: RX 470

Blender Version
Broken: 2.81 54a9649e26

Short description of error
Cycles failed to bake image, i got a blank output. I tested the baking few time and it was working fine with my cpu

Debug logs

blender_debug_output.txt
blender_system_info.txt

**System Information** Operating system: Windows 7 Graphics card: RX 470 **Blender Version** Broken: 2.81 54a9649e2636 **Short description of error** Cycles failed to bake image, i got a blank output. I tested the baking few time and it was working fine with my cpu **Debug logs** [blender_debug_output.txt](https://archive.blender.org/developer/F7794339/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F7794338/blender_system_info.txt)
Author

Added subscriber: @jangst.1024

Added subscriber: @jangst.1024

This issue was referenced by blender/cycles@969b8605a3

This issue was referenced by blender/cycles@969b8605a348ea1540511e83fcf65504fdfa2519

This issue was referenced by ad84f22628

This issue was referenced by ad84f22628d7ca1e3ade81ee5282edb2527e793a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-10-07 16:54:05 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70602
No description provided.