Fix T70602: error baking with Cycles OpenCL after recent changes